RESOLVED FIXED149297
AX: Implement ARIA 1.1 @aria-current on iOS
https://bugs.webkit.org/show_bug.cgi?id=149297
Summary AX: Implement ARIA 1.1 @aria-current on iOS
Nan Wang
Reported 2015-09-17 14:47:03 PDT
We should add support for @aria-current and enable the "aria-current.html" test on iOS.
Attachments
patch (6.03 KB, patch)
2015-09-17 15:29 PDT, Nan Wang
cfleizach: review+
commit-queue: commit-queue-
patch (6.09 KB, patch)
2015-09-18 12:20 PDT, Nan Wang
cfleizach: review+
commit-queue: commit-queue-
patch (6.07 KB, patch)
2015-09-18 14:21 PDT, Nan Wang
no flags
patch (6.07 KB, patch)
2015-09-18 14:29 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2015-09-17 14:47:21 PDT
Nan Wang
Comment 2 2015-09-17 14:49:47 PDT
Nan Wang
Comment 3 2015-09-17 15:29:10 PDT
chris fleizach
Comment 4 2015-09-18 10:00:45 PDT
Comment on attachment 261438 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=261438&action=review is the test missing? > LayoutTests/platform/ios-simulator/TestExpectations:2822 > +webkit.org/b/149297 accessibility/aria-current.html [ Pass ] this seems unnecessary
Nan Wang
Comment 5 2015-09-18 10:03:04 PDT
(In reply to comment #4) > Comment on attachment 261438 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=261438&action=review > > is the test missing? > > > LayoutTests/platform/ios-simulator/TestExpectations:2822 > > +webkit.org/b/149297 accessibility/aria-current.html [ Pass ] > > this seems unnecessary All the accessibility tests has been disabled, it has this in the TestExpectation: # Cannot enable AX tests because there are too many differences between what is available # through the iPhone AX API and the OS X AX API. accessibility
Nan Wang
Comment 6 2015-09-18 10:58:07 PDT
Issue: When testing with the example(https://bug-146012-attachments.webkit.org/attachment.cgi?id=261418) on iOS, the link is not exposed as accessibility element. In the function determineIsAccessibilityElement in WebAccessibilityObjectWrapperIOS, link is not exposed because the function containsUnnaturallySegmentedChildren returns NO. I'm wondering, in the comment it says "Links can sometimes be elements (when they only contain static text or don't contain anything).", which is the case for the example, shouldn't we expose the link as accessibility element? While diving deeper, in containsUnnaturallySegmentedChildren function, it returns NO when the element only has one child. However, I'm thinking it should return NO only if the only child is NOT static text or image. Make sense? Also with the current logic, the accessibility/ios-simulator/link-with-only-image.html test's expectation has a line "FAIL obj.isIgnored should be false. Was true.". We shouldn't include a failure in the expected result, right? In conclusion, by removing the "if (childrenSize == 1) return NO;" part in containsUnnaturallySegmentedChildren, the test will have the PASS result and link will be exposed as expected. Just want to make sure my logic is reasonable.
chris fleizach
Comment 7 2015-09-18 11:13:32 PDT
Comment on attachment 261438 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=261438&action=review >>> LayoutTests/platform/ios-simulator/TestExpectations:2822 >>> +webkit.org/b/149297 accessibility/aria-current.html [ Pass ] >> >> this seems unnecessary > > All the accessibility tests has been disabled, it has this in the TestExpectation: > # Cannot enable AX tests because there are too many differences between what is available > # through the iPhone AX API and the OS X AX API. > accessibility ah i see
WebKit Commit Bot
Comment 8 2015-09-18 11:58:21 PDT
Comment on attachment 261438 [details] patch Rejecting attachment 261438 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 261438, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 189973 = a2276595d900536d8307dcf2456d8c850d926fb3 r189974 = c29658de352c337cbefca5991f5df04441c599da r189975 = 9f418b818504a66362b76cbe6c3157e27867fca7 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: http://webkit-queues.webkit.org/results/183867
Nan Wang
Comment 9 2015-09-18 12:20:28 PDT
Created attachment 261508 [details] patch Should have fixed the commit failure.
WebKit Commit Bot
Comment 10 2015-09-18 14:09:55 PDT
Comment on attachment 261508 [details] patch Rejecting attachment 261508 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 261508, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ile Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/ios-simulator/TestExpectations Hunk #1 FAILED at 2824. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/ios-simulator/TestExpectations.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Chris Fleizach']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/184202
Nan Wang
Comment 11 2015-09-18 14:21:10 PDT
Created attachment 261524 [details] patch Fixed commit failure.
WebKit Commit Bot
Comment 12 2015-09-18 14:23:23 PDT
Attachment 261524 [details] did not pass style-queue: ERROR: LayoutTests/platform/ios-simulator/TestExpectations:2836: expecting "[", "#", or end of line instead of "accessibility/aria-current.html" [test/expectations] [5] ERROR: LayoutTests/platform/ios-simulator/TestExpectations:2836: Path does not exist. [test/expectations] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 13 2015-09-18 14:29:40 PDT
WebKit Commit Bot
Comment 14 2015-09-18 16:20:03 PDT
Comment on attachment 261525 [details] patch Clearing flags on attachment: 261525 Committed r189994: <http://trac.webkit.org/changeset/189994>
WebKit Commit Bot
Comment 15 2015-09-18 16:20:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.